--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,14 @@ environment:
 
 dependencies:
   browser: ^0.10.0
-  polymer_elements: ^1.0.0-rc.3
-  polymer: ^1.0.0-rc.7
-  reflectable: ^0.3.1
+  polymer: ^1.0.0-rc.11
   web_components: ^0.12.0
+  polymer_elements: ^1.0.0-rc.5
 
 transformers:
-- web_components:
-    entry_points: web/index.html
-- reflectable:
-    entry_points: web/index.bootstrap.initialize.dart
+- polymer:
+    entry_points:
+      - web/index.html
 - $dart2js:
     $include: '**/*.bootstrap.initialize.dart'
     minify: true
